--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "dplayer": "^1.26.0",
     "element-ui": "^2.4.5",
+    "flv.js": "^1.5.0",
+    "js-md5": "^0.7.3",
     "jsencrypt": "^3.0.0-rc.1",
     "qrcode": "^1.4.4",
     "qs": "^6.9.4",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3",
     "vue-slicksort": "^1.1.3",
     "vuex": "^3.4.0"
   },
@@ -25,8 +28,8 @@
     "@vue/cli-service": "~4.4.0",
     "babel-plugin-component": "^1.1.1",
     "less": "^3.0.4",
-    "less-loader": "^6.2.0",
+    "less-loader": "^7.0.1",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   }
 }
